--- a/products/templates/products/about.html
+++ b/products/templates/products/about.html
@@ -6,14 +6,14 @@
     {% load i18n %}
     {% load static %}
 
-    
-  
-
+    <h5 class="text-center"><span class="text-muted"></h5></span>
+      
     <div class="blog">
-      <p>
-
+    
       <H6 STYLE="font-family: 'avenir next rounded std'">
      <div class="container">
+  
+
 
     <!--- 
       Мы поставили себе задачу<br><br> <p style="color:rgb(229, 152, 147)">сделать максимально дружественный, удобный полиграфическмй сервис,</p> <br> где можно увидеть изображение, ввести тираж и сразу заказать продукцию,<p>
