--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -43,8 +43,12 @@
         <a class="nav-link" href="/"></a>
       </li>
       <li class="nav-item">
-       <!-- <a class="nav-link" href="/photo.html/">фотосъемка</a>-->
+       <!-- <a class="nav-link" href="/photo.html/">фотосъемка</a>-->   
+      
       </li> 
+      <li class="nav-item">
+        <a class="nav-link active" href="/requirements.html/"><i class="fas fa-print"></i> требования к макетам </a>
+      </li>
       <li class="nav-item">
         <a class="nav-link active" href="/delivery.html/"><i class="fas fa-truck"></i> {% trans 'доставка' %} </a>
       </li>
