--- a/products/templates/products/requirements.html
+++ b/products/templates/products/requirements.html
@@ -1,17 +1,144 @@
-<!--
-  <a href="/">
-    <figure class="stock">
-      <img src="/media/products/банер2.jpg" width="1450" height="450">
-    </figure>
-  </a>
 
-  -->
     
     {% extends 'products/base.html' %}
     {% load thumbnail %}
-    {% load i18n %}
     {% load crispy_forms_tags %}
     {% block content %}
+    {% load static %}
+    {% load i18n %}
+
+    <h5 class="text-center"><span class="text-muted"></h5></span>
+      
+    <div class="blog">
+    
+      <H6 STYLE="font-family: 'avenir next rounded std'">
+     <div class="container">
+      
+   
+  
+      <h2 class="text-center">Требования к макетам</h2>
+   
+   
+     <br>
+      <div class="row">
+
+
+        <h5><p class="text-left" > 
+     <br>
+
+  
+    <br>
+    ФОРМАТЫ ФАЙЛОВ
+    <br>
+    Макеты принимаются в следующих форматах:
+    - pdf (Adobe Acrobat),</p>
+    - ai, eps (Adobe Illustrator до версии CS5 включительно),
+    - indd (Adobe InDesign до версии CS5 включительно),
+    - tiff, psd (Adobe Photoshop до версии CS5 включительно),
+    - cdr (Corel Draw до версии Х5 включительно)
+    Преимущественно мы работаем в программах компании Adobe. Для обработки векторных файлов используется Illustrator,</p> для растровых – Photoshop, спуск многополосных изделий (брошюр, буклетов) производится в Acrobat. Для работы с многополосными изделиями также используется Abobe InDesign.
+    В случае CorelDRAW возможен экспорт макета в один из Adobe-форматов. При конвертации макета в формат Illustrator многие эффекты, созданные в CorelDRAW теряются.</p> В частности, неправильно конвертируются линзы и градиенты, а также искажения. </p>Если в макете по определенным причинам нельзя обойтись без применения подобных эффектов, следует растрировать такие элементы с разрешением 300 dpi. Макет в Office-формате (Word, Excel, PowerPoint) отправляется на Distiller «как есть». При этом следуют учитывать, что чаще всего используемые в таких документах шрифты (Arial, Times New Roman, Courier New) являются системными и их отображение на различных компьютерах может отличаться. Как в случае с CorelDRAW так и в случае с Microsoft Office утверждение переведённого макета обязательно!
+    
+    <br><br><br>
+    ЦВЕТОВАЯ МОДЕЛЬ
+    <br>
+    Все макеты должны быть выполнены в пространстве CMYK, без внедренного цветового профиля. Убедительная просьба: не предоставлять макеты в цветовых системах RGB, Lab и Pantone.  
+    МНОГОПОЛОСНЫЕ ИЗДЕЛИЯ.
+    <br><br><br>
+    ВЫЛЕТЫ И ОТСТУПЫ
+    <br>
+    Все элементы макета, находящиеся вплотную к его границе или же выходящие за неё, подразумевают изготовление конечного изделия без полей в этих местах (элемент «на вылет»). Границы таких элементов должны отстоять от границы изделия на 2.5 мм наружу. Остальные элементы макета (текст, логотипы и т.п.) должны отстоять от границы не менее чем на 3 мм внутрь.
+ 
+    <br><br><br>
+    ТЕКСТ
+    <br>
+    Вся текстовая информация макета в зависимости от формата файла должна быть организована следующим образом:
+    - pdf-формат – шрифты внедрены в файл или переведены в кривые
+    - векторные форматы (eps, ai, cdr) – текст переведён в кривые;
+    - растровые форматы (tiff) – текст отрастрирован;
+    - публикации (indd) – файлы шрифтов прилагаются.
+    Формат Adobe Acrob(pdf-документы) поддерживает автоматическое прикрепление шрифтов в структуру документа. При задании соответствующих настроек, pdf-файлы уже содержат всю информацию, необходимую для одинакового начертания текста на любой машине.
+    <br><br><br>   
+    ИЗОБРАЖЕНИЯ
+    <br>
+    Разрешение растровых файлов должно быть 300dpi. Это качество является оптимальным для корректной печати различных изображений. 
+Если Вы используете растровые элементы в векторном макете, то, в зависимости от форматов следует: - векторные форматы (eps, ai, cdr…) – растровые элементы встроены (place) в векторный файл. просим вас не использовать ссылки на изображения (links).
+- публикации (indd) – все растровые и другие вставленные в документ объекты располагаются в одной отдельной папке, желательно с характерным названием (Links, Images, Pictures…) Иных файлов в этой папке быть не должно - pdf- все изображения должны быть напрямую внедрены в макет.
+  
+<br><br><br>
+ЭЛЕМЕНТЫ РАЗМЕТКИ (РАМКИ, НАПРАВЛЯЮЩИЕ, МЕТКИ РЕЗА
+<br>
+В зависимости от форматов следует:
+- векторные форматы (eps, ai, cdr…) – лучше всего устанавливать рамку по обрезному краю изделия;
+- растровые форматы (tiff, jpg…) – не ставьте никакие метки!
+Если макет требует вылетов, подготовьте макет размером на 5 мм больше (например 215х95 для изделия 210х90);
+- публикации (indd) – на этапе вёрстки метки не указываются;
+- pdf-документы – не ставьте никакие метки!
+<br><br><br>
+СЛОИ, КАНАЛЫ, ЭФФЕКТЫ
+<br>
+Макет, подготовленный для печати не должен содержать никакой подобной дополнительной информации. Все слои должны быть слиты в один. Эффекты необходимо отрастрировать, поскольку не гарантируется их адекватный вывод на печать. В векторных форматах допускается использование прозрачности, однако перед печатью такие элементы, в любом случае, будут переводится в аналогичные сплошные цвета.
+<br><br><br>
+ОСОБЕННОСТИ ПОДГОТОВКИ МАКЕТОВ ДЛЯ ОТДЕЛЬНЫХ ВИДОВ ПРОДУКЦИИ
+<br>
+МНОГОПОЛОСНЫЕ ИЗДЕЛИЯ.
+<br>
+Макеты для заказов содержащих многополосные изделия или имеющие несколько разновидностей(более 10 видов\файлов ) продуктов одинакового формата принимаются только в формате pdf.
+- Многополосные макеты должны быть представлены пополосно (1 страница файла – 1 полоса), ни в коем случае не разворотами (Spreads)
+- Для макетов изделий с использованием плоттерной резки необходим векторный контур, сделанный в 1 цвет (1 слой)
+- Для заказа продукции с персонализацией необходимо предоставить сам печатный макет и подготовленный список в формате .xls
+<br>
+ВИЗИТНЫЕ КАРТОЧКИ.
+<br>
+Предпочтительные форматы: pdf, eps, ai. Каждая визитка сохраняется в отдельном файле. Если у Вас несколько видов визиток одного размера, можно сделать многостраничный pdf файл, в котором каждая страница – это новый макет визитки. Одна сторона напротив другой, если визитка двусторонняя.
+<br>
+ОТКРЫТКИ (и другие изделия с биговкой).
+<br>
+Предпочтительные форматы – pdf,eps, ai, tiff. Стороны открытки лучше располагать в отдельных файлах (в случае pdf – на разных страницах). Метки бига допустимо ставить только в файлах векторных форматов eps, ai! Старайтесь прилагать распечатку (можно ч/б), поясняющую совмещение сторон изделия и направление сгиба.
+<br>
+БУКЛЕТЫ («однолистовые брошюры»).
+<br>
+Предпочтительные форматы – pdf, eps, ai, tiff. Организуйте макет в виде двух разворотов. Не разделяйте развороты на отдельные полосы!
+<br>
+ЛИФЛЕТ (буклет с двумя сложениями,6 страниц).
+<br>
+Должен быть выполнен по схеме 97-100-100 мм для внешней стороны и 100-100-97 для внутренней.
+<br>
+БРОШЮРЫ (многополосные изделия).
+<br>
+Предпочтительные форматы – pdf, indd.
+1.Для сборки на пружину. Отступ внутрь со стороны навивки должен быть не менее 10 мм. Полосы идут последовательно, с одинаковой ориентацией.
+2.Для сборки на скрепку. Ввиду неизбежной погрешности совмещения листов, по возможности избегайте перехода текста с одной полосы на другую, через весь разворот. PDF-документ должен представлять собой прямую последовательность страниц – не развороты! Чтобы избежать эффекта «ёлочки» (выступ внутренних листов по сравнению с внешними из-за толщины бумаги), делайте горизонтальные вылеты 5 мм.
+<br>
+КВАРТАЛЬНЫЕ КАЛЕНДАРИ (под стандартные блоки размером 297х148 мм).
+<br>
+Предпочтительные форматы – eps, ai, tiff.
+Верхний постер-шапка (размер 297хN):
+- пикколо. Располагается по середине, центр на расстоянии 10 мм от верха, диаметр 5 мм. Макет должен быть составлен так, чтобы наличие пикколо не уродовало шапку,пружина располагается снизу. Поэтому все информационные элементы с целью нормального их восприятия должны отстоять от нижнего края не менее чем на 10 мм.
+Рекламно-информационные поля (размер 297хК1/K2/K3, обычно К1=K2=K3=50):
+- нижнее рекламно-информационное поле: пружина отсутствует.
+Промежуточные рекламно-информационные поля (2 штуки между блоками, необязательно):
+- пружина располагается снизу.
+<br>
+КАЛЕНДАРИ-ДОМИКИ (без пружины).
+<br>
+Предпочтительные форматы – eps, ai, tiff. Достаточно, чтобы макет представлял собой два изображения, соответствующих сторонам домика.
+<br>
+КАЛЕНДАРИ-ДОМИКИ ПЕРЕКИДНЫЕ.
+<br>
+Предпочтительные форматы – eps, ai, tiff, pdf. Месяцы и какие-либо дополнительные листы (обложки) должны быть сделаны в виде отдельных полос\файлов макета.
+<br><br><br>
+ПЛОТТЕРНАЯ РЕЗКА.
+Предпочтительные форматы – eps, ai, pdf.
+Обязательное требование ко всем файлам, независимо от формата – наличие векторного объекта, обозначающего контур реза для плоттера. Он должен располагаться в отдельном слое, лежащем НАД изображением. Этот слой не должен содержать ничего, кроме этого контура. Еще раз (важно!)– это должен быть именно векторный объект «контур» (Stroke), а не «заливка» (Fill)! Плоттер не считает его, если это заливка!
+
+Все элементы изображения, если они не идут навылет, должны иметь отступ от контура реза 2-3мм (в случаях, когда это расстояние должно быть еще меньше, это следует проговорить с менеджером при приемке макета, чтоб он смог проконсультироваться с дизайнером и резчиком).
+
+Плоттер может не только резать, но и биговать. Объекты для биговки должны быть также векторными контурами (Stroke). Чтоб не спутать их с контурами реза, их следует окрашивать их в разные цвета (напри-мер, контуры для реза – красный, контуры для бига – зеленый).
+
+Подробную информацию о полях печати и полях резки, особенностях плоттерной резки для макетов с фоном и без, о контуре сложной формы, а так же биговке, стикерпаках вы можете посмотреть в файле.
+
+    
     
       
     <div class="blog">
@@ -19,12 +146,12 @@
       <H6 STYLE="font-family: 'avenir next rounded std'">
      <div class="container">
       <br>
-     <h2 class="text-center">{% trans 'требования к файлам' %}</h2>
-     <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
+     <h2 class="text-center">Форматы файлов</h2>
+     <H5 STYLE="font-family: 'avenir next rounded std'">
      <br>
       <div class="row">
 
-        {% trans 'Форматы файлов
+
 
         Для печати принимаются растровые, векторные, PostScript и PDF файлы, а также файлы верстки QuarkXPress, PageMaker, InDesign в цветовой модели CMYK и Pantone:
         
@@ -96,7 +223,7 @@
         - верстка должна производиться по обрезному формату с доливкой по 5мм.
         
         Файлы, не соответствующие вышеперечисленным требованиям, не являются файлами готовыми к печати. Доработка файлов и как следствие изменение сроков сдачи тиража оговариваются дополнительно.
-' %}
+
 
         
     
