--- a/checkout/templates/checkout/index.html
+++ b/checkout/templates/checkout/index.html
@@ -95,7 +95,7 @@
                <div class="card-body">
                   <ul class="list-group list-group-flush"></ul>
              
-                  <h6 class="mb-3"> {% trans 'введите ваше имя' %}<span class="text-muted"></span></h6>
+                  <h6 class="mb-3"> {% trans 'введите название вашей организации' %}<span class="text-muted"></span></h6>
                   <div class="test_form">
                      <form action="{% url 'checkout:send_email' %}" method="POST" >
                         {% csrf_token %}
