--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -4,10 +4,15 @@
 {% load i18n %}
 
 
+<h5 class="text-center"><span class="text-muted"></h5></span>
+      
+    <div class="blog">
+    
+      <H6 STYLE="font-family: 'avenir next rounded std'">
+     <div class="container">
 
-
-<h4 class="text-center"><br><br><br>{% trans 'Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг.' %} (<i class="fas fa-walking"></i>) 
-   {% trans 'и от 1500 рублей' %}   (<i class="fas fa-truck"></i>){% trans 'за груз от 5 килограмм в зависимости от веса и расстояния и времени суток по г. Москве. Доставка в другие города рассчитывается согласно тарифам транспортной компании конкретного региона.' %} 
+<h4 class="text-center"><br><br><br>Стоимость доставки расчитывается отдельно <br>и составляет <br>от 400 рублей за груз до 5 килограмм, <br><i class="fas fa-walking"></i>
+   <br> и от 1500 рублей,<br><i class="fas fa-truck"></i><br>за груз от 5 килограмм, <br>в зависимости от веса и расстояния и времени суток по г. Москва. <br>Доставка в другие города рассчитывается согласно тарифам <br>транспортной компании конкретного региона.
 
 </h4>
 
