--- a/products/templates/products/products_details4.html
+++ b/products/templates/products/products_details4.html
@@ -10,6 +10,20 @@
 
 {% for product in products %}
 
+{% for field in form %}
+<center>
+    <label class="col-4">{{ field.label}}</label>
+    <ul>  <input id="123">  {{ field}} </ul>  
+</center>
+{% endfor %}
+
+<button id="{{ field}}">press</button>
+<script>
+document.getElementById(" {{ field}}").addEventListener("click", () => {
+  document.getElementById("123").focus();
+});
+
+</script>
 
 
 <div class="container my-5">
@@ -42,7 +56,27 @@
      </body>
     </html>
     
-   
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
+  
+  
+  {% if request.user.is_authenticated %}
+
+  
+  <center>
+       <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
+    </center>    
+         {% else %}
+        <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
+        
+        <center>
+            <p><a style="color:rgb(229, 152, 147)" href="/register.html"> <p style="color:rgb(0, 0, 0)"> {% trans 'зарегистрироваться ' %}</p></span></a></h6> 
+             {% endif %}
+            </center> 
+
+      
+      </body> 
 
 <!-- перезагрузка страницы по времени
 
@@ -122,7 +156,7 @@ $('body').on('action','element',function(){
     <p>
     <center>
       <button class="btn btn-outline-secondary collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-          технические характеристики продукта
+          техническое характеристики изделия
       </button> </center>
     </p>
     <div class="collapse" id="collapseExample" style="">
@@ -235,27 +269,7 @@ $(function () {
 
                 <br><br>
 
-                <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
-
-  
-  
-  {% if request.user.is_authenticated %}
-
-    
-  <center>
-       <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
-    </center>    
-         {% else %}
-        <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
-        
-        <center>
-            <p><a style="color:rgb(229, 152, 147)" href="/register.html"> <p style="color:rgb(0, 0, 0)"> {% trans 'зарегистрироваться ' %}</p></span></a></h6> 
-             {% endif %}
-            </center> 
-
-      
-      </body> 
+               
                
  <!-- флип-флоп
 
