--- a/products/templates/products/products_details_test.html
+++ b/products/templates/products/products_details_test.html
@@ -12,11 +12,19 @@
 
 
 
+
+
+
+
+
+
+
+
 <div class="container my-5">
     
     <div class="card">
         <div class="row">
-            <aside class="col-sm-5   border-right">
+            <aside class="col-sm-5 border-right">
     <article class="gallery-wrap"> 
     <div class="img-big-wrap">
 
@@ -42,9 +50,29 @@
      </body>
     </html>
     
-   
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 
-<!-- перезагрузка страницы по времени
+  
+  
+  {% if request.user.is_authenticated %}
+
+    
+  <center>
+       <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
+    </center>    
+         {% else %}
+        <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
+        
+        <center>
+            <p><a style="color:rgb(229, 152, 147)" href="/register.html"> <p style="color:rgb(0, 0, 0)"> {% trans 'зарегистрироваться ' %}</p></span></a></h6> 
+             {% endif %}
+            </center> 
+
+      
+      </body> 
+
+<!--
 
 
 <script>
@@ -105,41 +133,10 @@ $('body').on('action','element',function(){
 </html>
 -->
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://bootstrap-4.ru/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="p-3 m-0 border-0 bd-example">
-
-    <!-- Example Code -->
-    
-    <p>
-    <center>
-      <button class="btn btn-outline-secondary collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-          технические характеристики продукта
-      </button> </center>
-    </p>
-    <div class="collapse" id="collapseExample" style="">
-      <div class="card card-body">
-{{product.detail_text }}
-      </div>
-    </div>
-    
-    
-  </body>
-</html>
-
- <!--
 <ul>
     <div onmouseover="this.style.color='black';" onmouseout="this.style.color='black';">{{product.detail_text }}</div>
  
-</ul> -->
+</ul> 
 
 <p id="demo"></p>
 
@@ -151,12 +148,12 @@ d = {{product.boxsize.d}}
 
 document.getElementById("demo").innerHTML = a;
 </script>
- <!--
+
 <center>
 
 <p style="color:rgb(0, 0, 0
 )">  {% trans 'мин.тираж' %}- {{product.lim1}} {% trans 'шт.' %}.(<span class="price-new">{{product.maxprice}} ₽/шт.);<p>{% trans 'мaкс.тираж' %}- {{product.lim2}} шт. ({{product.minprice}} ₽/шт.)</span></p></td>
-</center> -->
+</center>
 
    <!-- <h6 class="title mb-3">{{product.detail_text }}</h3> -->
 <div class="container-fluid">
@@ -169,7 +166,7 @@ document.getElementById("demo").innerHTML = a;
 
 
 
-                <!--всплывающая подсказка-->
+            
 
 
               <script>
@@ -178,27 +175,27 @@ document.getElementById("demo").innerHTML = a;
                 })
                 </script>
               
-       
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<p style="margin:40px;"> <a target="_blank" 
-  data-toggle="tooltip" 
-  data-placement="right" title='минимальный тираж - {{product.lim1}} шт. цена: {{product.maxprice}} ₽/шт. максим. тираж - {{product.lim2}} шт., цена: {{product.minprice}} ₽/шт.'   ; <p> 
-
+                     
+              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+              <p style="margin:40px;">стоимость изделия варьируется в диапазоне от  <a target="_blank" 
+                href=# data-toggle="tooltip" 
+                data-placement="top" title='мин.тираж {{product.lim1}} штук, макс.тираж {{product.lim2}} штук,' {{product.minprice}} ₽/шт. ; <p> {{product.minprice}} ₽/шт. </p> до
    
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script>
-$(function () {
-  $('[data-toggle="tooltip"]').tooltip()
-})
-</script> 
+                 
+              <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+              <script>
+              $(function () {
+                $('[data-toggle="tooltip"]').tooltip()
+              })
+              </script> 
 
+              
               
             {% for field in form %}
             <center>
                 <label class="col-4">{{ field.label }}</label>
-                
           
           <ul>   {{ field }}   </ul>  
         </center>
@@ -235,29 +232,9 @@ $(function () {
 
                 <br><br>
 
-                <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
-
-  
-  
-  {% if request.user.is_authenticated %}
-
-    
-  <center>
-       <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
-    </center>    
-         {% else %}
-        <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
-        
-        <center>
-            <p><a style="color:rgb(229, 152, 147)" href="/register.html"> <p style="color:rgb(0, 0, 0)"> {% trans 'зарегистрироваться ' %}</p></span></a></h6> 
-             {% endif %}
-            </center> 
-
-      
-      </body> 
                
- <!-- флип-флоп
+               
+
 
     
 
@@ -265,9 +242,10 @@ $(function () {
 
          
 <ul id="animals" style="display: none;">
-
+ 
+ <!--
     <li><div id="browse_app">
-</li> 
+</li> -->
 
 <li><div id="browse_app">
 
@@ -276,12 +254,13 @@ $(function () {
     то есть автоматически увеличивает тираж до минимального, или считает не больше максимального.
 
 </li>
-
-
   
-</div>   --> 
+<!--</div>  подчеркивание на всю страницу --> 
 
-</hr>
+<hr />
+
+ 
+
 </ul>
 <html>
   
