--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -37,7 +37,7 @@
         <tr> 
             <center>   <td><h3><p style="color:rgb(0, 0, 0)">{{product.calc}} руб. за {{product.tirazh}} шт.</p></h3></td>  </center> 
         </tr>
-       
+        Обращаем ваше внимание на то, что данный Интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.
     
      </body>
     </html>
